--- a/index.html
+++ b/index.html
@@ -6,9 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/0432420ca7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+    <!-- main section start -->
+    <main>
+        <section>
+            <div class="flex">
+                <div class="header-title">
+                    <h1>The Greatest <br> show on the <br> earth</h1>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply
+                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
+                        2000
+                        years old.</p>
+                    <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+                </div>
+                <div>
+                    <div class="header-image">
+                        <img src="assets/Banner Image.png" alt="">
+                    </div>
+                </div>
+        </section>
+    </main>
+    <!-- main section end -->
 
 </body>
 
