--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <!-- main section start -->
     <main>
-        <section>
-            <div class="flex">
+        <section class="header-section">
+            <div class="container">
                 <div class="header-title">
                     <h1>The Greatest <br> show on the <br> earth</h1>
                     <p>Contrary to popular belief, Lorem Ipsum is not simply
