Blog section added

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/0432420ca7.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <!-- main section start -->
     <main>
+        <!-- header section start  -->
         <section class="header-section">
             <div class="container">
                 <div class="header-title">
@@ -22,7 +25,7 @@
                         random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
                         2000
                         years old.</p>
-                    <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+                    <a class="watch-link-button" href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
                 </div>
                 <div>
                     <div class="header-image">
@@ -30,6 +33,133 @@
                     </div>
                 </div>
         </section>
+        <!-- header section end  -->
+
+        <!-- blog section start  -->
+        <section class="blog-container">
+            <div class="blogs-button-section">
+                <div class="blogs-button">
+                    <a href="">Upcoming Match</a>
+                    <a href="">All Group</a>
+                    <a href="">Blog</a>
+                </div>
+                <div>
+
+                </div>
+            </div>
+
+            <div class="blogs">
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- blog section end  -->
     </main>
     <!-- main section end -->
 
