--- a/index.html
+++ b/index.html
@@ -17,36 +17,32 @@
     <!-- main section start -->
     <main>
         <!-- header section start  -->
-        <section class="header-section">
-            <div class="container">
-                <div class="header-title">
-                    <h1>The Greatest <br> show on the <br> earth</h1>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply
-                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
-                        2000
-                        years old.</p>
-                    <a class="watch-link-button" href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
-                </div>
-                <div>
-                    <div class="header-image">
-                        <img src="assets/Banner Image.png" alt="">
-                    </div>
-                </div>
+        <section class="container">
+            <div class="header-title">
+                <h1>The Greatest <br> show on the <br> earth</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply
+                    random text. It has roots in a piece of classical Latin literature from 45 BC, making it
+                    over
+                    2000
+                    years old.</p>
+                <a class="watch-link-button" href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+            </div>
+            <div class="header-image">
+                <img src="assets/Banner Image.png" alt="">
+            </div>
         </section>
         <!-- header section end  -->
 
         <!-- blog section start  -->
         <section class="blog-container">
-            <div class="blogs-button-section">
-                <div class="blogs-button">
-                    <a href="">Upcoming Match</a>
-                    <a href="">All Group</a>
-                    <a href="">Blog</a>
-                </div>
-                <div>
-
-                </div>
+            <!-- <div class="blogs-button-section"> -->
+            <div class="blogs-button">
+                <a href="">Upcoming Match</a>
+                <a href="">All Group</a>
+                <a id="blog-button" href="">Blog</a>
             </div>
+
+            <!-- </div> -->
 
             <div class="blogs">
                 <div class="blog">
@@ -160,8 +156,38 @@
             </div>
         </section>
         <!-- blog section end  -->
+
+        <!-- footer section start  -->
+        <section class="footer-section">
+            <footer>
+                <div class="footer-goal">
+                    <h1>Goal</h1>
+                </div>
+                <hr>
+                <div class="manues">
+                    <nav>
+                        <a href="">Contact Us</a>
+                        <a href="">Terms of Service</a>
+                        <a href="">Privacy Policy </a>
+                        <a href="">Privacy Settings</a>
+                        <a href="">Goal App</a>
+                        <a href="">Goal Live</a>
+                    </nav>
+                </div>
+                <div class="social-icon">
+                    <a href="https://www.facebook.com/farvez101/"><i class="fa-brands fa-facebook-square"></i></a>
+                    <a href="https://www.linkedin.com/in/farvez101/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/farvez101/"><i class="fa-brands fa-instagram-square"></i></a>
+                </div>
+            </footer>
+        </section>
+
     </main>
     <!-- main section end -->
+
+
+
+    <!-- footer section end  -->
 
 </body>
 
