--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/0432420ca7.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -37,9 +37,9 @@
         <section class="blog-container">
             <!-- <div class="blogs-button-section"> -->
             <div class="blogs-button">
-                <a href="">Upcoming Match</a>
-                <a href="">All Group</a>
-                <a id="blog-button" href="">Blog</a>
+                <a href="upcoming-match.html">Upcoming Match</a>
+                <a href="all-group.html">All Group</a>
+                <a id="blog-button" href="index.html">Blog</a>
             </div>
 
             <!-- </div> -->
@@ -192,10 +192,6 @@
 
     </main>
     <!-- main section end -->
-
-
-
-    <!-- footer section end  -->
 
 </body>
 
