--- a/all-group.html
+++ b/all-group.html
@@ -151,6 +151,14 @@
         </section>
         <!-- blog section end  -->
 
+        <!-- only tab view watch all start  -->
+        <section class="watch-all-section">
+            <div class="watch-all">
+                <a href="">View All</a>
+            </div>
+        </section>
+        <!-- only tab view watch all end  -->
+
         <!-- footer section start  -->
         <section class="footer-section">
             <footer>
