--- a/index.html
+++ b/index.html
@@ -153,6 +153,60 @@
                         </div>
                     </div>
                 </div>
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="blog-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-details">
+                        <a href="">Transfer</a>
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-info">
+                            <div class="blog-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                1:30hr
+                                <i class="fa-regular fa-message"></i>
+                                23
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- blog section end  -->
